Update modal styles and other stuff

--- a/extension/hbs/modal.hbs
+++ b/extension/hbs/modal.hbs
@@ -1,27 +1,29 @@
-<h4 class="name">{{ name }}</h4>
-{{#if location }}
-<h5 class="location">{{ location }}</h5>
-{{/if}}
+<div class="inform-header">
+    <a class="link" href="{{{ orgUrl }}}">
+        <h4 class="name">{{ name }}</h4><i class="icon-external"></i>
+    </a>
+    {{#if location }}
+    <h5 class="location">{{ location }}</h5>
+    {{/if}}
+</div>
 {{#if rating }}
 <span class="rating {{rating.description}}">
+    <span class="dots">
     {{#each rating.dots }}
     <i class="status-{{ state }}"></i>
     {{/each}}
+    </span>   
     {{ rating.description }}
 </span>
 {{/if}}
 <p class="description">{{ description }}</p>
-<a href="#" class="show-more">More info</a>
+<a href="{{{ showMore }}}" class="show-more link">More info</a><i class="icon-external"></i>
 {{#if full }}
 <div class="get-involved">
-    <div class="donate">
-        <form>
-            <input type="text"></input>
-            <button type="submit">Donate</button>
-        </form>
-    </div>
-    <div class="volunteer">
-        <a href="#">Get involved</a>
-    </div>
+    <form class="donate-form">
+        <input type="text"></input>
+        <button type="submit">Donate</button>
+    </form>
+    <a class="volunteer-link link" href="{{{ volunteer }}}">Get involved</a>
 </div>
 {{/if}}
