--- a/extension/scss/_vars.scss
+++ b/extension/scss/_vars.scss
@@ -10,3 +10,6 @@ $involve-warning: #ff7a50;
 $gray-primary: #a2a2a2;
 $gray-secondary: #eaeaea;
 $black: #333;
+$white: #fff;
+
+$arrow: 'chrome-extension://nbnflpbniahefgfiggjebijfcfffhndj/img/arrow.png';
