--- a/extension/scss/_vars.scss
+++ b/extension/scss/_vars.scss
@@ -9,6 +9,7 @@ $involve-secondary: #8aedf8;
 $involve-warning: #ff7a50;
 $gray-primary: #a2a2a2;
 $gray-secondary: #eaeaea;
+$involve-primary-10: rgba(82, 239, 150, 0.1);
 $black: #333;
 $white: #fff;
 
