Update url + client email code

--- a/extension/scss/_vars.scss
+++ b/extension/scss/_vars.scss
@@ -13,4 +13,4 @@ $involve-primary-10: rgba(82, 239, 150, 0.1);
 $black: #333;
 $white: #fff;
 
-$arrow: 'chrome-extension://nbnflpbniahefgfiggjebijfcfffhndj/img/arrow.png';
+$arrow: 'chrome-extension://__MSG_@@extension_id__/img/arrow.png';
