--- a/extension/scss/_fonts.scss
+++ b/extension/scss/_fonts.scss
@@ -3,38 +3,38 @@
   font-family: 'Graphik';
   font-weight: 300;
   font-style: normal;
-  src:  url('chrome-extension://nbnflpbniahefgfiggjebijfcfffhndj/fonts/graphik-normal-300.woff2') format('woff2'),
-        url('chrome-extension://nbnflpbniahefgfiggjebijfcfffhndj/fonts/graphik-normal-300.woff2') format('woff');
+  src:  url('chrome-extension://__MSG_@@extension_id__/fonts/graphik-normal-300.woff2') format('woff2'),
+        url('chrome-extension://__MSG_@@extension_id__/fonts/graphik-normal-300.woff2') format('woff');
 }
 
 @font-face {
   font-family: 'Graphik';
   font-weight: 400;
   font-style: normal;
-  src:  url('chrome-extension://nbnflpbniahefgfiggjebijfcfffhndj/fonts/graphik-normal-400.woff2') format('woff2'),
-        url('chrome-extension://nbnflpbniahefgfiggjebijfcfffhndj/fonts/graphik-normal-400.woff2') format('woff');
+  src:  url('chrome-extension://__MSG_@@extension_id__/fonts/graphik-normal-400.woff2') format('woff2'),
+        url('chrome-extension://__MSG_@@extension_id__/fonts/graphik-normal-400.woff2') format('woff');
 }
 
 @font-face {
   font-family: 'Graphik';
   font-weight: 500;
   font-style: normal;
-  src:  url('chrome-extension://nbnflpbniahefgfiggjebijfcfffhndj/fonts/graphik-normal-500.woff2') format('woff2'),
-        url('chrome-extension://nbnflpbniahefgfiggjebijfcfffhndj/fonts/graphik-normal-500.woff2') format('woff');
+  src:  url('chrome-extension://__MSG_@@extension_id__/fonts/graphik-normal-500.woff2') format('woff2'),
+        url('chrome-extension://__MSG_@@extension_id__/fonts/graphik-normal-500.woff2') format('woff');
 }
 
 @font-face {
   font-family: 'Graphik';
   font-weight: 600;
   font-style: normal;
-  src:  url('chrome-extension://nbnflpbniahefgfiggjebijfcfffhndj/fonts/graphik-normal-600.woff2') format('woff2'),
-        url('chrome-extension://nbnflpbniahefgfiggjebijfcfffhndj/fonts/graphik-normal-600.woff2') format('woff');
+  src:  url('chrome-extension://__MSG_@@extension_id__/fonts/graphik-normal-600.woff2') format('woff2'),
+        url('chrome-extension://__MSG_@@extension_id__/fonts/graphik-normal-600.woff2') format('woff');
 }
 
 @font-face {
   font-family: 'Graphik';
   font-weight: 700;
   font-style: normal;
-  src:  url('chrome-extension://nbnflpbniahefgfiggjebijfcfffhndj/fonts/graphik-normal-700.woff2') format('woff2'),
-        url('chrome-extension://nbnflpbniahefgfiggjebijfcfffhndj/fonts/graphik-normal-700.woff2') format('woff');
+  src:  url('chrome-extension://__MSG_@@extension_id__/fonts/graphik-normal-700.woff2') format('woff2'),
+        url('chrome-extension://__MSG_@@extension_id__/fonts/graphik-normal-700.woff2') format('woff');
 }
